--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -50,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment:
-      name: Production
+      name: Prod
       url: https://writeabout.net
     if: github.event.inputs.environment == 'Production'
     steps:
