--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -52,7 +52,7 @@ jobs:
     environment:
       name: prod
       url: https://writeabout.net
-    if: github.event.inputs.environment == 'Production'
+    if: github.event.inputs.environment == 'prod'
     steps:
       - run: |
           echo "🚀 Step 1..."
