--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -45,14 +45,13 @@ jobs:
       - run: |
           echo "🧪 Testing..."
           sleep 15
-
   Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment:
-      name: prod
+      name: Production
       url: https://writeabout.net
-    if: github.event.inputs.environment == 'prod'
+    if: github.event.inputs.environment == 'Production'
     steps:
       - run: |
           echo "🚀 Step 1..."
@@ -69,7 +68,3 @@ jobs:
       - run: |
           echo "🚀 Step 5..."
           sleep 10
-      
-      
-      
-    
