--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - run: |
           echo "🧪 Testing..."
-          sleep 15
+          # sleep 15
   Load-Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
@@ -44,7 +44,7 @@ jobs:
     steps:
       - run: |
           echo "🧪 Testing..."
-          sleep 15
+          # sleep 15
   Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
