--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -51,7 +51,7 @@ jobs:
     environment:
       name: Production
       url: https://writeabout.net
-    # if: github.event.inputs.environment == 'Production'
+    if: github.event.inputs.environment == 'Production'
     steps:
       - run: |
           echo "🚀 Step 1..."
